# metadedup

./: README.md
client/: CMakeLists.txt  config  main.cc
client/chunking/: chunker.cc  chunker.hh
client/coding/: CDCodec.cc  CDCodec.hh  decoder.cc  decoder.hh  encoder.cc  encoder.hh
client/comm/: downloader.cc  downloader.hh  uploader.cc  uploader.hh
client/keyClient/: exchange.cc  exchange.hh
client/keys/: mycert.pem
client/utils/: CryptoPrimitive.cc  DataStruct.hh  Logger.cc  Logger.hh  MessageQueue.hh  conf.hh  socket.cc  socket.hh  ssl.cc  ssl.hh
server/: CMakeLists.txt  main.cc
server/backend/: BackendStorer.cc  BackendStorer.hh
server/comm/: server.cc  server.hh
server/dedup/: DedupCore.cc  DedupCore.hh  dataStruct.hh  minDedupCore.cc  minDedupCore.hh
server/utils/: Logger.cc  Logger.hh
